# basic_diffbot

./: CMakeLists.txt  README.md  package.xml
launch/: display_launch.py  one_robot_gz_launch.py  simple_robot_gz_launch.py
roboticaposgrado/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
roboticaposgrado/meshes/: RP_logo.dae
urdf/: caster_diffbot.xacro  caster_diffbot_gz.xacro  the_simplest_diffbot.xacro  the_simplest_diffbot_gz.xacro
worlds/: empty.world
