<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_diffbot</name>
  <version>1.0.0</version>
  <description>Package to simulate a simple differential drive mobile robot with ROS 2 and Gazebo</description>
  <maintainer email="cmauricioae8@gmail.com">C. Mauricio Arteaga Escamilla from "Robotica Posgrado" (YouTube channel)</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend> <!-- To make sure that the ros2 launch command is available after building your package -->

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/<user_name>/colcon_ws/install/basic_diffbot/share/" />
  </export>
</package>
